client/canary/scripts/helmrepo_basicath/app_chartmuseum.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-chartmuseum
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-ch-chartmuseum
