client/canary/scripts/helmrepo_basicath/app_helloworld.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-sub-wshi
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-ch-wshi
