client/canary/scripts/helmrepo_basicath/app_chartmuseum_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chartmuseum-chartmuseum
  namespace: ns-chartmuseum
spec:
  host:
  path: /charts
  to:
    kind: Service
    name: chartmuseum-chartmuseum
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
